add comments in notebook

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,12 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow_datasets as tfds\n",
     "\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from tensorflow.keras.models import load_model\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "\n",
     "\n",
     "os.environ['PYTHONHASHSEED'] = str(42) \n",
     "os.environ['TF_DETERMINISTIC_OPS'] = '1'\n",
@@ -1217,8 +1215,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import multilabel_confusion_matrix\n",
-    "\n",
     "# Fazendo previsões no conjunto de teste\n",
     "y_pred = model.predict(test_inputs)\n",
     "\n",
@@ -1234,6 +1230,13 @@
     "    print(f\"Matriz de Confusão para a classe {label}:\")\n",
     "    print(confusion_matrix[i])\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Valores muito interessantes de acurácia para todas classes, o modelo consegue entender bem o contexto de cada setor."
    ]
   },
   {
