--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -783,7 +783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Construindo o tokenizer (tendo 10 mil como o tamanho do vocabulario alvo)\n",
+    "## Construindo o tokenizer \n",
     "tokenizer = Tokenizer()\n",
     "tokenizer.fit_on_texts(X.tolist())\n",
     "vocab_size = len(tokenizer.word_index) + 1"
