--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -216,6 +216,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observa-se que os textos estão na língua portuguesa com acentos, números e caracteres especiais."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {},
@@ -275,6 +282,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "O plot acima evidencia quais são os setores predominantes e fica claro também que não é tão comum ter textos classificados com mais de um setor. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Nesse momento, é importante decidir qual será a abordagem da modelagem. Com o desbalanceamento dos dados, dá a entender que considerar as classes múltiplas pode ser um problema e uma alternativa seria associar cada texto à um único setor, onde esses seriam 'copiados' e associados às demais classes. No entanto, isso poderia causar confusão no aprendizado do modelo.  \n",
     "\n",
     "Dito isso, consideraremos a abordagem Multilabel. Aqui estão algumas justificativas:\n",
@@ -285,15 +299,15 @@
     "\n",
     "- **Capacidade de capturar associações entre categorias:**\n",
     "\n",
-    "    A função de ativação sigmoid combinada com a binarização das classes, permite ao modelo atribuir probabilidades para cada categoria (saída da sigmoid é entre 0 e 1). Assim, mesmo que um texto seja associado a mais de uma classe, o modelo pode aprender a atribuir pesos diferentes a cada uma delas, capturando as associações entre as classes.\n",
+    "    Se utilizarmos a função de ativação sigmoid combinada com a binarização das classes, será possível fazer com que o modelo atribua probabilidades para cada categoria (saída da sigmoid é entre 0 e 1). Assim, mesmo que um texto seja associado a mais de uma classe, o modelo pode aprender a atribuir pesos diferentes a cada uma delas, capturando as associações entre as classes.\n",
     "\n",
     "- **Aumento da capacidade do modelo de entender a complexidade:**\n",
     "\n",
     "    Permitindo que o texto seja associado a mais de uma classe, o modelo se torna mais capaz de capturar a complexidade dos dados. Usar uma abordagem multilabel permite ao modelo capturar essas nuances e atribuir pesos apropriados a cada categoria.\n",
     "\n",
-    "- **Como a função sigmoid vai dar predizer mais de uma classe?**\n",
+    "- **Como a função sigmoid vai predizer mais de uma classe?**\n",
     "\n",
-    "    Nesse contexto, a função sigmoid vai dar o peso para as 5 classes (valores entre 0 e 1), aquelas que apresentarem o valor acima de um threashold estabelecido, serão consideradas as labels para o texto fornecido."
+    "    Nesse contexto, a função sigmoid vai dar o peso para as 5 classes (valores entre 0 e 1), aquelas que apresentarem o valor acima de um threshold estabelecido, serão consideradas as labels para o texto fornecido."
    ]
   },
   {
@@ -423,7 +437,7 @@
     }
    ],
    "source": [
-    "## A label com dois setor está assumindo o tipo 'string' única, precisamos fazer com que seja uma lista com duas strings\n",
+    "## A label com dois setores está assumindo o tipo 'string' única, precisamos fazer com que seja uma lista com duas strings\n",
     "dataset[setor] = [set.split(',') for set in dataset[setor]]\n",
     "dataset"
    ]
@@ -727,6 +741,7 @@
     }
    ],
    "source": [
+    "## Aplicando o cleaning para todos os textos\n",
     "dataset[texto] = [cleaning(text) for text in dataset[texto]]\n",
     "dataset"
    ]
@@ -739,18 +754,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Antes da tokenização, vamos definir X como os textos e y sendo a representação númerica de cada setor (aplicando o label enconding)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Definindo X como os textos \n",
     "X = dataset[texto]"
    ]
   },
@@ -909,13 +918,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Aplicando binarização nas classes\n",
+    "mlb = MultiLabelBinarizer()\n",
+    "data_labels = mlb.fit_transform(dataset['category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlb = MultiLabelBinarizer()\n",
-    "data_labels = mlb.fit_transform(dataset['category'])\n",
-    "\n",
     "train_inputs, test_inputs, train_labels, test_labels = train_test_split(data_inputs,\n",
     "                                                                        data_labels,\n",
     "                                                                        test_size=0.1,\n",
@@ -945,14 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Criando o modelo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Iniciando o Treinamento "
+    "Criando o modelo CNN"
    ]
   },
   {
@@ -1034,6 +1044,13 @@
     "nb_classes = 5\n",
     "dropout_rate = 0.2\n",
     "nb_epochs = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iniciando o Treinamento "
    ]
   },
   {
@@ -1252,7 +1269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_sector(text: object = 'Texto com o tema de interesse', threashold: float = 0.3) -> list:\n",
+    "def predict_sector(text: object = 'Texto com o tema de interesse', threshold: float = 0.3) -> list:\n",
     "    \n",
     "    new_sentence = text\n",
     "\n",
@@ -1263,8 +1280,7 @@
     "    # Previsão da nova frase\n",
     "    predictions = model.predict(new_sentence_tokens_padded)\n",
     "\n",
-    "    # Decodificação da previsão\n",
-    "    threshold = 0.1  # Limiar de probabilidade para considerar a classe presente ou não\n",
+    "    # Verificando quais classes possuem pesos acima do threshold estabelecido\n",
     "    predicted_labels = (predictions > threshold).astype(int)\n",
     "\n",
     "    # Decodificando os rótulos previstos usando o MultiLabelBinarizer inverso\n",
@@ -1304,7 +1320,7 @@
     }
    ],
    "source": [
-    "predict_sector('No cartao com juros!')"
+    "predict_sector('No cartão com juros!')"
    ]
   },
   {
